fixed nav collapse, incident authguard, updated footer

--- a/public/content/app.css
+++ b/public/content/app.css
@@ -93,5 +93,9 @@ min-width: 100px;
 }
 .footer{
   background-color: #C8B1E4;
-  height: 100px;
+  height: 50px;
+}
+.footer a{
+  text-decoration: none;
+  color: black;
 }
